fix: :bug: Fix multiple issues with spacing
refactor: Ajusted more apps (Alphabetical order)
fix: Spacing issues in more apps.
fix: overlay animation.
fix: Ugly borders when you're using light mode.

--- a/css/styles.css
+++ b/css/styles.css
@@ -281,10 +281,9 @@ input:checked + .slider:before {
 .cuteapps {
   display: inline-block;
   width: 12%;
-  margin: 0 0.5% 15px;
+  margin: 0 0.5% 19px;
   padding: 4px 20px;
   text-align: center;
-  border: 3px solid #1e232cde;
   border-radius: 10px;
 }
 
